overflow fixes!

--- a/src/App.css
+++ b/src/App.css
@@ -103,7 +103,7 @@ body {
 	margin-top: 5px;
 	text-align:left;
 	width:250px;
-	height:300px;
+	min-height:300px;
 	flex: 1 1 0;
 	text-decoration: none;
 }
@@ -130,7 +130,7 @@ body {
 .post-preview-img-background {
 	background-color:black;
 	widows: 100%;
-	height:65%;
+	height:195px;
 	position:relative;
 }
 
@@ -184,11 +184,13 @@ body {
 	margin-top:5px;
 	margin-bottom:5px;
 	font-size: 18px;
-	color:rgba(9, 98, 231, 0.993)
+	color:rgba(9, 98, 231, 0.993);
+	width:100%;
 }
 
 .preview-title-link {
 	text-decoration: none;
+	width:100%;
 }
 
 .post-preview:hover .preview-title-link {
@@ -198,12 +200,16 @@ body {
 
 .preview-desc-link {
 	text-decoration: none;
+	width:100%;
 }
 
 .preview-desc {
 	font-size: 14px;
 	text-decoration: none;
 	color:rgba(10,15,55,1);
+	width: 100%;
+	overflow: visible;
+	word-wrap:break-word;
 }
 
 .container-grid {
